[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ressources/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Ressources/Tic.png" type="Texture" id=2]
[ext_resource path="res://Scripts/OptionMenu.gd" type="Script" id=3]
[ext_resource path="res://Ressources/On.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Off.png" type="Texture" id=5]

[node name="OptionMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Volume" type="Control" parent="."]
anchor_left = 0.333
anchor_right = 0.667
anchor_bottom = 0.122
margin_left = 0.640015
margin_right = -0.640015
margin_bottom = 0.240005

[node name="Label" type="Label" parent="Volume"]
anchor_right = 0.733
anchor_bottom = 0.402
margin_right = -0.119751
margin_bottom = -0.0639954
custom_fonts/font = ExtResource( 1 )
text = "Volume : 80"

[node name="HSlider" type="HSlider" parent="Volume"]
anchor_top = 0.447
anchor_right = 1.0
anchor_bottom = 0.848
margin_top = -0.00400543
margin_bottom = 0.0640259
custom_icons/tick = ExtResource( 2 )
step = 5.0
value = 80.0
rounded = true
tick_count = 50
ticks_on_borders = true

[node name="Music" type="Control" parent="."]
anchor_left = 0.333
anchor_top = 0.122
anchor_right = 0.667
anchor_bottom = 0.171
margin_left = 0.640015
margin_top = 0.240005
margin_right = -0.640137
margin_bottom = 0.319992

[node name="Label" type="Label" parent="Music"]
anchor_right = 0.631
anchor_bottom = 1.0
margin_right = -139.84
margin_bottom = -31.758
custom_fonts/font = ExtResource( 1 )
text = "Music : On"

[node name="CheckButton" type="CheckButton" parent="Music"]
anchor_left = 0.881
anchor_right = 1.019
anchor_bottom = 1.151
margin_left = 0.159973
margin_right = -12.16
margin_bottom = -8.003
custom_icons/off = ExtResource( 5 )
custom_icons/on = ExtResource( 4 )
pressed = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.333
anchor_top = 0.214
anchor_right = 0.477
anchor_bottom = 0.269
margin_left = 0.640015
margin_top = -0.12001
margin_right = 0.159973
margin_bottom = -0.52002
custom_fonts/font = ExtResource( 1 )
text = "Return"

[connection signal="value_changed" from="Volume/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="Music/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
